--- a/src/app/svg-code-viewer/svg-code-viewer.component.html
+++ b/src/app/svg-code-viewer/svg-code-viewer.component.html
@@ -6,5 +6,5 @@
         id="copy-icon"
         (click)="copyCode()"
         >
-    <textarea id="outline-svg" readonly [value]="generateSvgService.codeViewer"></textarea>
+    <textarea id="outline-svg" readonly [value]="generateSvgService.codeViewer" [(ngModel)]="textareaValue"></textarea>
 </div>
