--- a/src/app/svg-configuration/svg-configuration.component.html
+++ b/src/app/svg-configuration/svg-configuration.component.html
@@ -103,3 +103,7 @@
             >
     </label>
 </div>
+
+<div class="input-holder" id="input-holder-button">
+    <button id="bt_download" (click)="generateSvgService.downloadSVG()">Download</button>
+</div>
